# smolcde

./: .editorconfig  .git-blame-ignore-revs  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.ipynb  README.md  RELEASE_NOTES_v0.2.md  TODO.md  cde.py  cfgs_lorenz.txt  cfgs_mnist.txt  maf.c  maf.h  main.c  pyproject.toml  results_lorenz.jsonl  results_mnist.jsonl  run_experiments  test_cde.py
.github/workflows/: ci.yml
benchmarks/: MNIST_FAILURE_ANALYSIS.md  bench_lorenz  bench_mnist  diagnose_mnist.py  thorough_mnist_onehot.py
demos/: bench_c_vs_py.py  demo_banana.sh  demo_lorenz.sh  demo_mnist.sh
smolcde.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
