cmake_minimum_required(VERSION 3.10)
project(smolcde C)
set(CMAKE_C_STANDARD 99)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -O3")
include_directories(include)
add_library(smolmaf SHARED maf.c)
target_link_libraries(smolmaf m)
add_executable(smolcde main.c)
target_link_libraries(smolcde smolmaf m)
