[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smolcde"
version = "0.2.0"
description = "Small conditional density estimation library (MAF + MDN)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "autograd",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scikit-learn",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/maedoc/smolcde"

[tool.setuptools]
py-modules = ["cde"]
