[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smolcde"
version = "0.2.0"
description = "Small conditional density estimation library (MAF + MDN)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
]
dependencies = [
    "numpy",
    "scipy",
    "autograd",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "scikit-learn",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/maedoc/smolcde"

[tool.setuptools]
py-modules = ["cde"]
